welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: type mismatch;
 found   : Int(110)
 required: Boolean
  return (90<=n<=110 || 190<=n<=210)} 
                 ^nearHundred:2: error: type mismatch;
 found   : Int(210)
 required: Boolean
  return (90<=n<=110 || 190<=n<=210)} 
                                ^